@@ -1,75 +1,48 @@
 <?php
 
-function course_category() {
-	require($_SERVER['DOCUMENT_ROOT'] . '/reou/includes/const.php');
-	require(D_ROOT . '/reou/helpers/courses_helper.php');
+require($_SERVER['DOCUMENT_ROOT'] . '/reou/includes/const.php');
+require(D_ROOT . '/reou/helpers/courses_helper.php');
+require(D_ROOT . "/reou/models/Course.php");
 
 
-	function _autoload($class_name) {
-		require_once(D_ROOT . "/reou/models/". $class_name . '.php');
-	}
+// --------------- course_category.php ---------------------
 
+function course_category($ObjectPDO) {
 
-	$course = new Course($db);
+	$course = new Course($ObjectPDO);
 	$categories = $course->get_course_category();
-} // Course Category End
+
+	return $categories;
+}
 
 
-function course_classes() {
 
-	require($_SERVER['DOCUMENT_ROOT'] . '/reou/includes/const.php');
-	require(D_ROOT . '/reou/courses/helpers/helpers.php');
+// --------------- course_classes.php ---------------------
 
-	function _autoload($class_name) {
-		require_once("classes/". $class_name . '.php');
-	}
+function course_classes($ObjectPDO) {
 
 	$course_id = verify_get('id');
-	$course = new Course($db);
+	$course = new Course($ObjectPDO);
 	$categories = $course->get_course_classes($course_id);
 
+	return $categories;
 
-	// Debugging -------------------------
-
-	if(isset($categories[0]) && !empty($categories[0]) ) {
-		foreach ($categories[0] as $k => $v) {
-
-			echo $k . " - ";
-
-		};		
-	};
-
-	// -----------------------------------
-} // Course Classes End
-
-function course_detail() {
-
-	require($_SERVER['DOCUMENT_ROOT'] . '/reou/includes/const.php');
-	
-	function __autoload($class_name) {
-		require_once("classes/". $class_name . '.php');
-	}
-
-	require(D_ROOT . '/reou/courses/helpers/helpers.php');
+}
 
 
+// --------------- course_classes.php ---------------------
+
+function course_detail($ObjectPDO) {
+
+	$return_values = [];
 	$course_class_id = verify_get('id');
-	$course = new Course($db);
-	$course_detail = $course->get_class_details($course_class_id);
-	$course_schedules = $course->get_course_schedule($course_class_id);
+	$course = new Course($ObjectPDO);
 
+	$return_values['details'] = $course->get_class_details($course_class_id);
+	$return_values['schedules'] = $course->get_course_schedule($course_class_id);
 
-	// Debugging -------------------------
+	return $return_values;
+}
 
-	if( isset($course_details[0]) && !empty($course_details[0]) ) {
-		foreach ($course_details[0] as $key => $value) {
-				echo $k . " - ";
-			}	
-	}
-	// -----------------------------------
-} // Course Detail end
-
-// Perhaps make a controller class.
-// This way you can auto load all classes in this obeject.
 
 ?>
